Fixed mobile header alignment

--- a/public/assets/sass/header.scss
+++ b/public/assets/sass/header.scss
@@ -5,7 +5,9 @@
     z-index: 2;
     &.login {
         .container {
-            justify-content: center;
+            &.header-login {
+                justify-content: center;
+            }
             .menu {
                 nav {
                     ul {
@@ -72,6 +74,7 @@
                             text-align: center;
                             display: flex;
                             align-items: center;
+                            justify-content: center;
                             &.signin {
                                 display: none;
                             }
